# filterables

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: on-commit.yml
src/filterables/: __init__.py  deps.py  fields.py  filters.py  pages.py  sorters.py  types.py
tests/: conftest.py
tests/filterables/: test_deps.py  test_filters.py  test_pages.py  test_sorters.py  test_types.py
tests/resources/: template.tera
tests/resources/people-1/: dataset.jsonl
tests/resources/people-100/: dataset.jsonl
tests/resources/people-25/: dataset.jsonl
