[build-system]
requires = ["setuptools >= 77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filterables"
version = "0.8.0"
description = "Filtering and pagination for Pydantic and SQLModel, with FastAPI integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic~=1.14",
    "fastapi~=0.116",
    "pydantic~=2.10",
    "sqlmodel~=0.0.22"
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "pytest-env~=1.1",
    "ruff~=0.12"
]

[[project.authors]]
name = "Latent AI"
email = "support@latentai.com"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://latentai.com/"
