[build-system]
requires = ["setuptools >= 77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filterables"
version = "0.8.0"
description = "Filtering and pagination for Pydantic and SQLModel, with FastAPI integration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic~=1.14",
    "fastapi~=0.116",
    "pydantic~=2.10",
    "sqlmodel~=0.0.22"
]

[project.optional-dependencies]
dev = [
    "httpx~=0.28",
    "mypy~=1.17",
    "psycopg2-binary~=2.9",
    "pymssql~=2.3",
    "PyMySQL[rsa]~=1.1",
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "pytest-env~=1.1",
    "ruff~=0.12"
]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Latent AI"
email = "support@latentai.com"

[project.urls]
homepage = "https://latentai.com/"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["."]
python_files = [
    "tests/**/test.py",
    "tests/**/test_*.py"
]
filterwarnings = []
addopts = [
    "--import-mode=importlib",
    "--cov=src",
    "--cov-report=html:coverage",
    "--cov-report=json:coverage/report.json",
    "--cov-report=xml:coverage/cobertura-coverage.xml"
]
env = [
    "D:FILTERABLES_DATABASE_URI=sqlite://",
    "D:FILTERABLES_DATABASE_DEBUG=0"
]
